# memos-engine

./: .gitignore  AGENTS.md  AGENTS_EXAMPLE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
memos/api/: main.py  schemas.py
memos/cli/: doctor.py  main.py
memos/core/: db.py  models.py  schema.sql
memos/core/migrations/: 0001_init.sql  0002_vec.sql  0003_prompt_version.sql  0004_memory_fts.sql  0005_symbol_name_file_index.sql
memos/indexer/: base.py  diff.py  go.py  python.py  typescript.py
memos/mcp/: server.py
memos/query/: core.py  import_resolver.py
memos/search/: base.py  embeddings.py  sqlite_vec_store.py
scripts/: benchmark_index.py
tests/: conftest.py  test_api.py  test_cli_doctor.py  test_cli_index.py  test_cli_index_incremental.py  test_cli_query.py  test_crud.py  test_dependency_graph.py  test_diff_range.py  test_go_indexer.py  test_hygiene.py  test_impact.py  test_import_resolution_efficiency.py  test_import_resolver.py  test_javascript_indexer.py  test_llm_summary.py  test_mcp.py  test_memory_hygiene.py  test_migrations.py  test_packaging.py  test_python_indexer.py  test_query.py  test_query_efficiency.py  test_reindex.py  test_resolver.py  test_schema.py  test_semantic_search.py  test_typescript_indexer.py  test_watch.py
tests/fixtures/go_mini/: go.mod
tests/fixtures/go_mini/src/: importer.go  main.go  types.go  utils.go
tests/fixtures/import_cycle/src/: a.ts  b.ts
tests/fixtures/javascript_mini/src/: index.js  utils.js
tests/fixtures/python_mini/src/: main.py  types.py  utils.py
tests/fixtures/typescript_mini/src/: index.ts  types.ts  utils.ts
