[project]
name = "memos-engine"
version = "0.1.0"
description = "Memory OS for AI coding agents — structural code index with episodic memory"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "TAskMAster339" }]
license = { text = "MIT" }
keywords = ["mcp", "code-index", "ast", "tree-sitter", "ai-agents"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "tree-sitter>=0.26.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "fastembed>=0.3.0",
    "sqlite-vec>=0.1.0",
    "rich>=15.0.0",
    "mcp[cli]>=1.28.1",
    "tree-sitter-python>=0.23.0",
]

[project.urls]
Repository = "https://github.com/TAskMAster339/memos-engine"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["memos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
memos = "memos.cli.main:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004", "N802", "RUF015"]

[tool.ruff.lint]

ignore = ["COM812"]

select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # flynt
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
